--- a/projeto-java/src/main/java/br/com/bandtec/projeto/java/Tela.form
+++ b/projeto-java/src/main/java/br/com/bandtec/projeto/java/Tela.form
@@ -207,6 +207,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="90" red="1e" type="rgb"/>
         </Property>
+        <Property name="minimum" type="int" value="5"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
